Fix: on hover flickering;

--- a/purplebit_site/main_site/static/main_site/css/designr-theme-purple.css
+++ b/purplebit_site/main_site/static/main_site/css/designr-theme-purple.css
@@ -326,6 +326,11 @@ body {
 .flexslider {
     z-index: 1;
 }
+
+/* onhover flickering fix */
+.scrollimation, .scrollimation div {
+    -webkit-backface-visibility:hidden;
+}
 /*----------------------
 -----Header Styles------
 ------------------------*/
